<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_20"
    tools:context="com.example.appinventiv.infoguard.homepage.DataFragment">

    <TextView
        android:id="@+id/tv_fill_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_fill_details"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_username"
        android:textSize="@dimen/sp_18"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_below="@id/tv_fill_details"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/text_username"
        android:layout_toEndOf="@id/tv_phone_number"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/tv_fill_details"
        android:layout_marginStart="@dimen/dp_10"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="@dimen/sp_18"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:maxLength="25"/>

    <TextView
        android:id="@+id/tv_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_phone_number"
        android:textSize="@dimen/sp_18"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_below="@id/et_username"/>

    <Spinner
        android:id="@+id/spinner_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/tv_phone_number"
        android:layout_below="@id/et_username"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginStart="@dimen/dp_10"
        android:entries="@array/contact_number"/>

    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/text_phone_number"
        android:layout_toEndOf="@id/spinner_number"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/et_username"
        android:maxLines="1"
        android:ellipsize="end"
        android:maxLength="10"
        android:textSize="@dimen/sp_18"
        android:inputType="phone"
        android:imeOptions="actionNext" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_email"
        android:textSize="@dimen/sp_18"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_below="@id/et_phone_number"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/text_email"
        android:layout_toEndOf="@id/tv_phone_number"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/et_phone_number"
        android:layout_marginStart="@dimen/dp_10"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="@dimen/sp_18"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:maxLength="25"/>

    <TextView
        android:id="@+id/tv_dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_dob"
        android:textSize="@dimen/sp_18"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_below="@id/et_email"/>

    <TextView
        android:id="@+id/et_dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/text_dob"
        android:layout_toEndOf="@id/tv_phone_number"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/et_email"
        android:layout_marginStart="@dimen/dp_10"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="@dimen/sp_18"
        android:drawableEnd="@drawable/ic_date"
        android:layout_marginTop="@dimen/dp_20"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_save"
        android:layout_below="@id/et_dob"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_20"/>

</RelativeLayout>
