<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp_5">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/dp_5">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_20">

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_18"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Category"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/iv_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_edit"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_username"
                android:layout_marginTop="@dimen/dp_10"
                app:layout_constraintTop_toBottomOf="@id/tv_category"/>

            <TextView
                android:id="@+id/tv_username_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_category"
                tools:text="Shivangi"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginStart="@dimen/dp_20"
                app:layout_constraintStart_toEndOf="@id/tv_number"/>

            <TextView
                android:id="@+id/tv_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_phone_number"
                android:layout_marginTop="@dimen/dp_10"
                app:layout_constraintTop_toBottomOf="@id/tv_username_value"/>

            <TextView
                android:id="@+id/tv_number_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_username_value"
                tools:text="987654210"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginStart="@dimen/dp_20"
                app:layout_constraintStart_toEndOf="@id/tv_number"/>

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_email"
                android:layout_marginTop="@dimen/dp_10"
                app:layout_constraintTop_toBottomOf="@id/tv_number_value"/>

            <TextView
                android:id="@+id/tv_email_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_number_value"
                tools:text="shivangi.singla@gmail.com"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginStart="@dimen/dp_20"
                app:layout_constraintStart_toEndOf="@id/tv_number"/>

            <TextView
                android:id="@+id/tv_dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_dob"
                android:layout_marginTop="@dimen/dp_10"
                app:layout_constraintTop_toBottomOf="@id/tv_email_value"/>

            <TextView
                android:id="@+id/tv_dob_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_email_value"
                tools:text="19/03/1997"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginStart="@dimen/dp_20"
                app:layout_constraintStart_toEndOf="@id/tv_number"/>

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>